# ntex-restful-api-server

./: .env  .env.development  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: complie.yml
migrations/: 20240315134307_init.up.sql
migrations/2024-03-01-074756_create_users/: up.sql
migrations/2024-03-06-063526_add_email_and_avatar_to_users/: down.sql  up.sql
migrations/2024-03-08-054950_add_role_and_password_to_users/: down.sql  up.sql
migrations/2024-03-17-073228_create_users/: down.sql  up.sql
src/: errors.rs  main.rs
src/.github/workflows/: complie.yml
src/handlers/: mod.rs  routes.rs  user.rs
src/middleware/: auth.rs
src/models/: schema.rs  user.rs
src/repository/: database.rs  redis.rs
src/utils/: cookie.rs  jwt.rs
