[package]
name = "ntex-restful-api-server"
description = "A demo app for ntex restful api server."
authors = ["Elton Zheng <elton.zheng@me.com>"]
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
ntex = { version = "1.1", features = ["tokio", "compress"] }
ntex-cors = "1.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
env_logger = "0.11"
log = "0.4"
derive_more = "0.99"
dotenv = "0.15"

diesel = { version = "2.1", features = ["postgres", "r2d2", "chrono"] }
r2d2 = "0.8"
r2d2_postgres = "0.18"
chrono = { version = "0.4", features = ["serde"] }

redis = { version = "0.25", features = ["tokio-comp"] }

argon2 = "0.5"
base64 = "0.22"
rand_core = { version = "0.6", features = ["std"] }

jsonwebtoken = "9"
ulid = "1.1"
cookie = { version = "0.18", features = ["private"] }
