[package]
name = "ntex-restful-api-server"
description = "A demo app for ntex restful api server."
authors = ["Elton Zheng <elton.zheng@me.com>"]
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
ntex = { version = "2", features = ["tokio", "compress"] }
ntex-cors = "2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11"
log = "0.4"
derive_more = { version = "1", features = ["full"] }
# The dotenv crate itself appears abandoned as of December 2021 so we now use the dotenvy crate instead. The file format is the same.
dotenvy = "0.15"
time = "0.3.36"

diesel = { version = "2.2", features = ["postgres", "r2d2", "chrono"] }
r2d2 = "0.8"
r2d2_postgres = "0.18"
chrono = { version = "0.4", features = ["serde"] }

redis = { version = "0.26", features = ["tokio-comp"] }

argon2 = "0.5"
base64 = "0.22"
rand_core = { version = "0.6", features = ["std"] }

jsonwebtoken = "9"
ulid = "1.1"
